--- a/src/css/scss/basic/_default.scss
+++ b/src/css/scss/basic/_default.scss
@@ -7,11 +7,13 @@ body {
     background: $cDark;
     color: $color;
     font: #{$font-size}/#{1} $font-family;
-    padding: 46px $indent;
+    letter-spacing: -0.03em;
+    padding: 54px $indent 40px;
     scroll-behavior: smooth;
     @include tablet {
         font-size: $font-size__big;
         margin: auto;
+        padding: 54px 20px 40px;
     }
 }
 
