--- a/src/css/scss/layout/_footer.scss
+++ b/src/css/scss/layout/_footer.scss
@@ -1,9 +1,48 @@
 .footer {
+    padding: $indent;
     @include tablet {
         display: flex;
         align-items: flex-start;
-        flex-wrap: wrap;
-        max-width: 482px;
+        justify-content: space-between;
         margin: auto;
+    }
+
+    &_contacts {
+        margin: 0 0 40px;
+    }
+    &_contacts-title {
+        display: block;
+        font-size: 46px;
+        margin: 0 0 25px;
+    }
+    &_contacts-line {
+        font-size: 21px;
+        margin: 0 0 5px;
+        @include tablet {
+            font-size: 30px;
+        }
+
+        &__indent {
+            margin: 0 0 30px;
+        }
+    }
+    &_link {
+        font-size: 21px;
+        @include tablet {
+            font-size: 30px;
+        }
+
+        &[href^="mailto"] {
+            text-decoration: underline;
+        }
+    }
+    &_copyrights {
+        font-size: 18px;
+        margin: 40px 0 0;
+        width: 200px;
+        @include tablet {
+            margin-top: 30px;
+            width: auto;
+        }
     }
 }
