--- a/src/css/scss/layout/_footer.scss
+++ b/src/css/scss/layout/_footer.scss
@@ -7,6 +7,10 @@
         margin: auto;
     }
 
+    .article-opened & {
+        animation: 1s $easing onArticleOpened forwards;
+    }
+
     &_contacts {
         margin: 0 0 40px;
     }
