--- a/src/css/scss/basic/_default.scss
+++ b/src/css/scss/basic/_default.scss
@@ -10,6 +10,7 @@ body {
     letter-spacing: -0.03em;
     padding: 54px $indent 40px;
     scroll-behavior: smooth;
+    transition: .2s $easing opacity;
     @include tablet {
         font-size: $font-size__big;
         margin: auto;
@@ -19,7 +20,7 @@ body {
 
 a {
     color: $color;
-    text-decoration: none;
+    text-decoration: underline;
     transition: .2s $easing opacity;
 
     &:hover,
