--- a/src/css/scss/layout/_content.scss
+++ b/src/css/scss/layout/_content.scss
@@ -1,107 +1,27 @@
 .content {
+    padding: 50px 0;
     position: relative;
-    @include media(400px) {
-        padding: 0 0 0 24px;
-    }
-    @include tablet {
-        display: flex;
-        padding-bottom: 130px;
-    }
-    @include desktop {  
-        gap: 74px;
-    }
+    transition: .3s $easing padding;
 
-    &_column {
-        max-width: 550px;
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        border-bottom: 1px solid rgba(#E2E2E2, .2);
+        transition: .3s $easing opacity;
         @include tablet {
-            flex-grow: 1;
-            width: calc(50% - 40px);
-        }
-        @include desktop {
-            width: calc(50% - 62px);
-        }
-
-        &:last-child {
-            padding: 0 0 66px;
-            margin: 0 0 70px;
-            position: relative;
-            @include tablet {
-                margin: 28px 0 0 80px;
-                padding: 0;
-            }
-            @include desktop {
-                margin-top: 6px;
-                margin-left: 124px;
-            }
-
-            &::after {
-                content: '';
-                position: absolute;
-                left: 50%;
-                top: 100%;
-                margin-left: -42px;
-                height: 4px;
-                width: 60px;
-                background: $cDark;
-                @include tablet {
-                    content: none;
-                }
-            }
-
-            .button-link {
-                min-width: 50%;
-                padding-left: 40px;
-                padding-right: 40px;
-
-            }
-        }
-
-        h1 {
-            @include tablet {
-                margin-top: 30px;
-                width: 120%;
-            }
-            @include desktop {
-                margin-top: 0;
-            }
-
-            & + p {
-                margin-top: 30px;
-            }
-        }
-        h2 {
-            @include tablet {
-                max-width: 80%;
-            }
-        }
-        h3:first-child {
-            @include tablet {
-                margin-top: 30px;
-            }
-            @include desktop {
-                margin-top: 6px;
-            }
-        }
-        a {
-            word-wrap: break-word;
+            left: 70px;
+            right: 70px;
         }
     }
-    &_column-sticky {
-        @include tablet {
-            position: sticky;
-            top: 175px;
+
+    .article-opened & {
+        padding-top: 0;
+
+        &::before {
+            opacity: 0;
         }
-        @include desktop {
-            top: 150px;
-        }
-    }
-    &_links {
-        margin: 40px 0 0;
-    }
-    &_link {
-        display: block;
-        margin: 0 0 10px;
-        text-decoration: underline;
-        color: $cBlue;
     }
 }
