--- a/src/css/scss/style.scss
+++ b/src/css/scss/style.scss
@@ -23,6 +23,8 @@
 @import  "layout/popup";
 @import  "layout/share";
 @import  "layout/article";
+@import  "layout/fade";
+@import  "layout/intro";
 
 /* other */
 @import  "other/status";
