--- a/src/css/scss/layout/_content.scss
+++ b/src/css/scss/layout/_content.scss
@@ -1,8 +1,8 @@
 .content {
     padding: 50px 0;
     position: relative;
-    transition: .3s $easing padding;
-
+    transition: .3s $easing padding,
+                .5s $easing opacity 2s;
     &::before {
         content: '';
         position: absolute;
@@ -17,6 +17,9 @@
         }
     }
 
+    .content-hidden & {
+        opacity: 0;
+    }
     .article-opened & {
         padding-top: 0;
 
