--- a/src/css/scss/layout/_headings.scss
+++ b/src/css/scss/layout/_headings.scss
@@ -1,20 +1,21 @@
-%heading-1 {
+@mixin heading-1 {
     font-size: 46px;
     font-weight: normal;
-    margin: 0 0 20px;
+    margin: 0 0 30px;
     @include tablet {
         font-size: 90px;
+        margin-bottom: 80px;
     }
 }
-%heading-2 {
+@mixin heading-2 {
     font-size: 30px;
     font-weight: normal;
     margin: 0 0 20px;
 }
-%heading-3 {
+@mixin heading-3 {
     font-size: 30px;
     font-weight: normal;
-    margin: 0 0 20px;
+    margin: 0 0 30px;
     @include tablet {
         font-size: 46px;
     }
@@ -22,13 +23,16 @@
 
 h1,
 .heading-1{
-    @extend %heading-1;
+    @include heading-1;
 }
 h2,
 .heading-2 {
-    @extend %heading-2;
+    @include heading-3;
+    @include tablet {
+        @include heading-2;
+    }
 }
 h3,
 .heading-3 {
-    @extend %heading-3;
+    @include heading-3;
 }
