--- a/src/css/scss/layout/_content.scss
+++ b/src/css/scss/layout/_content.scss
@@ -21,7 +21,7 @@
         opacity: 0;
     }
     .article-opened & {
-        padding-top: 0;
+        //padding-top: 0;
 
         &::before {
             opacity: 0;
