--- a/src/css/scss/other/_status.scss
+++ b/src/css/scss/other/_status.scss
@@ -1,10 +1,18 @@
 .status {
     position: relative;
     overflow: hidden;
+    margin: 0 0 50px;
+    transition: .3s $easing opacity;
+    @include tablet {
+        padding: 0 70px;
+        margin-bottom: 150px;
+    }
 
+    .article-opening & {
+        opacity: 0;
+    }
     .article-opened & {
-        animation: 1s $easing onArticleOpened forwards,
-                    .5s $easing collapsing forwards;
+        display: none;
     }
 
     &_title {
